@@ -1,5 +1,6 @@
 2016-06-02  SilverNexus
 	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
+	* search.c: Increase severity of short read on non-mmap file load to ERROR and bail on that file.
 
 2016-06-01  SilverNexus
 	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
